fixed form overlap with header issue

--- a/css/style.css
+++ b/css/style.css
@@ -376,10 +376,6 @@ ul {
     color: #888
 }
 
-#landing-image {
-    height: 100%;
-}
-
 .btn {
     padding: 0.5rem 2rem;
     border: 1px #888888 solid;
@@ -398,6 +394,7 @@ ul {
 }
 
 #header {
+    border-top: solid 1px #ffffff;
     padding: 1.5rem;
     text-align: center;
     background: #333;
